<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/cancel_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/close_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        />
    <TextView
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:lineHeight="24sp"
        android:fontFamily="@font/roboto_regular"
        />
    <EditText
        android:id="@+id/edit_text"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|start"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:background="@color/white"
        android:hint="@string/todo_question"
        android:layout_marginTop="23dp"
        android:layout_marginHorizontal="16dp"
        android:elevation="10dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/save_button"
    />
    <TextView
        android:id="@+id/priority_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        app:layout_constraintTop_toBottomOf="@id/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:lineHeight="20sp"
        android:fontFamily="@font/roboto_regular"
        />
    <TextView
        android:id="@+id/priority_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/priority_default"
        app:layout_constraintTop_toBottomOf="@id/priority_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:textColor="@color/tertiary"
        android:textSize="14sp"
        android:lineHeight="24sp"
        android:fontFamily="@font/roboto_regular"
        />
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/priority_divider"
        android:layout_width="match_parent"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/priority_selector"
        app:dividerColor="@color/separator"
        app:dividerThickness="1dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_deadline"
        app:layout_constraintTop_toBottomOf="@id/priority_divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:lineHeight="20sp"
        android:fontFamily="@font/roboto_regular"
        />
    <TextView
        android:id="@+id/date_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:fontFamily="@font/roboto_regular"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/priority_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:thumbTint="@drawable/thumb"
        app:trackTint="@drawable/track"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        />
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/date_divider"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/date_text"
        app:dividerColor="@color/separator"
        app:dividerThickness="1dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal"
        android:background="@drawable/ripple_layout"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="@id/date_divider"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/button_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/delete_icon"
            app:tint="@color/disable" />
        <TextView
            android:id="@+id/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/disable"
            android:layout_marginStart="12dp"
            android:textSize="16sp"
            android:lineHeight="20sp"
            android:fontFamily="@font/roboto_regular"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>